After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719439 - qtquick2videosink: Wrong uniform value is set for GST_VIDEO_FORMAT_I420 in VideoMaterialShader::updateState()
qtquick2videosink: Wrong uniform value is set for GST_VIDEO_FORMAT_I420 in Vi...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: qt-gstreamer
git master
Other Linux
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-27 17:30 UTC by Benjamin Federau
Modified: 2014-11-08 14:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the GST_VIDEO_FORMAT_I420 color issue (607 bytes, patch)
2013-11-27 17:31 UTC, Benjamin Federau
none Details | Review

Description Benjamin Federau 2013-11-27 17:30:00 UTC
When using the qmlplayer2 example the colors of the Big Buck Bunny video are not correct. 

Inside the VideoMaterialShader::updateState() function the m_id_rgbTexture var is used to set the uniform value for RGB or YUV textures. If the video format is GST_VIDEO_FORMAT_I420 the m_id_rgbTexture var is -1. Because of this the uniform value for RGB textures is set. This causes the incorrect colors of the video.

The attached patch solves this for me.
Comment 1 Benjamin Federau 2013-11-27 17:31:17 UTC
Created attachment 262965 [details] [review]
Patch for the GST_VIDEO_FORMAT_I420 color issue
Comment 2 George Kiagiadakis 2014-02-03 11:57:37 UTC
commit 10798183484bc2ae7496db0c1193109d1702d4b5
Author: Benjamin Federau <benjamin.federau@basyskom.com>
Date:   Mon Feb 3 12:45:20 2014 +0100

    qtquick2videosink: fix wrong uniform value set for GST_VIDEO_FORMAT_I420 in VideoMaterialShader::updateState()
    
    Inside the VideoMaterialShader::updateState() function the m_id_rgbTexture var
    is used to set the uniform value for RGB or YUV textures. If the video format
    is GST_VIDEO_FORMAT_I420 the m_id_rgbTexture var is -1. Because of this the
    uniform value for RGB textures is set. This causes the incorrect colors of the
    video. This patch fixes this bug.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=719439